tests/snapshots/run_wpt_conformance__litert_isInfinite_float32_all_infinite_values.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "is_infinite.https.any.js",
    "isInfinite float32 all infinite values",
    "litert",
    "PASS",
)
