tests/snapshots/run_wpt_conformance__litert_isInfinite_float32_large_finite_values.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "is_infinite.https.any.js",
    "isInfinite float32 large finite values",
    "litert",
    "PASS",
)
